<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/colorGrey"

>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
        <!-- COORDINATOR INFORMATION -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordinator_info"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="32dp"
        >
            <EditText
                android:id="@+id/et_coord_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:hint="@string/field_name"
            />

            <EditText
                android:id="@+id/et_coord_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/field_phone"
            />
        </LinearLayout>

        <!-- EQUIPMENT INFORMATION -->
        <EditText
            android:id="@+id/et_scope_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="5dp"
            android:textSize="24sp"
            android:hint="@string/form_scope"
            android:background="@color/colorWhite"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/form_addEq"
        />
        <EditText
            android:id="@+id/et_other_equipment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="5dp"
            android:layout_marginBottom="16dp"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:background="@color/colorWhite"
        />

        <!-- RENTAL PERIOD -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_lendingPeriod"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="32dp"
        >
            <EditText
                android:id="@+id/et_fromDate"
                android:onClick="setDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/form_from"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none"
            />
            <EditText
                android:id="@+id/et_toDate"
                android:onClick="setDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/form_return"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none"
            />
        </LinearLayout>

        <!-- BORROWER INFORMATION -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_borrower"
                android:layout_marginRight="24dp"
            />
            <CheckBox
                android:id="@+id/cb_is_member"
                android:onClick="checkboxClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_isMember"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            >
            <EditText
                android:id="@+id/et_borrower_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:hint="@string/field_name"
                />

            <EditText
                android:id="@+id/et_borrower_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/field_phone"
                />
        </LinearLayout>
        <EditText
            android:id="@+id/et_borrower_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_email"
            android:layout_marginBottom="16dp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
        >
            <Button
                android:id="@+id/btn_takePic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:text="@string/form_takePic"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
            />

            <ImageView
                android:id="@+id/headshot"
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
            />
        </LinearLayout>

        <!-- DEPOSIT INFORMATION -->
        <TextView
            android:id="@+id/tv_deposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:text="@string/form_deposit40"
        />

        <!-- TERMS AND CONDITIONS, AGREEMENT -->
        <LinearLayout
            android:id="@+id/ll_terms"
            android:onClick="openTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/form_terms"
            />
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_expand"
            />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_agreeTerms"
            android:layout_marginBottom="10dp"
        />

        <!-- SIGNATURE SECTION -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
        >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:text="@string/form_signature"
            />

            <Button
                android:id="@+id/btn_clearSignature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/sig_clear"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/canvas_signature"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            android:background="#fff"
        />

        <!-- FINISH BUTTON -->
        <Button
            android:id="@+id/form_save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:text="@string/form_submit"
            android:background="@color/colorPrimary"
        />
    </LinearLayout>
</ScrollView>